--- a/src/components/JobCard/jobCard.module.css
+++ b/src/components/JobCard/jobCard.module.css
@@ -8,12 +8,14 @@
   position: relative !important;
   border-radius: 20px !important;
   padding: 5px !important;
+  margin: 5px !important;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 4px 0px !important;
 }
 
 .cardItem a {
   font-size: 14px;
   text-decoration: none;
-  color: #095c94;
+  color: #4943da;
 }
 
 .description {
@@ -28,7 +30,7 @@
 
 .cardItem:hover {
   transition: all 0.2s ease-in-out;
-  transform: scale(1.02);
+  transform: scale(1.01);
 }
 
 .cardText {
@@ -77,8 +79,8 @@
 
 .dates .date {
   padding: 4px 6px;
-  box-shadow: rgba(6, 6, 6, 0.05) 0px 2px 6px 0px;
-  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 4px 0px !important;
+  border-radius: 20px;
   border: 1px solid rgb(230, 230, 230);
 }
 
