--- a/src/components/JobCard/jobCard.module.css
+++ b/src/components/JobCard/jobCard.module.css
@@ -5,6 +5,7 @@
 
 .cardItem {
   height: 100% !important;
+  max-width: 400px;
   position: relative !important;
   border-radius: 20px !important;
   padding: 5px !important;
@@ -78,7 +79,7 @@
 }
 
 .dates .date {
-  padding: 4px 6px;
+  padding: 4px 10px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 4px 0px !important;
   border-radius: 20px;
   border: 1px solid rgb(230, 230, 230);
